--- a/contact-us.html
+++ b/contact-us.html
@@ -35,7 +35,7 @@
                                 <a href="./recomender.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/recomender:font-[600] group-hover/recomender:font-[600]">Recommender<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/recomender:opacity-100 group-hover/recomender:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group/seller menu-item active">
+                            <li class="group/seller menu-item">
                                 <a href="./seller.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/seller:font-[600] group-hover/seller:font-[600]">Seller<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/seller:opacity-100 group-hover/seller:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
@@ -47,8 +47,8 @@
                                 <a href="./faq.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/faq:font-[600] group-hover/faq:font-[600]">FAQ<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/faq:opacity-100 group-hover/faq:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
-                            <li class="group/contact-us menu-item">
-                                <a href="dashbord-home.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/contact-us:font-[600] group-hover/contact-us:font-[600]">Contact Us<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/contact-us:opacity-100 group-hover/contact-us:opacity-100"></span></a>
+                            <li class="group/contact-us menu-item active">
+                                <a href="./contact-us.html" class="px-[12px] relative text-color5 transition-all duration-[.1s]  group-[.active]/contact-us:font-[600] group-hover/contact-us:font-[600]">Contact Us<span class="absolute opacity-0 h-[1px] transition-all duration-[.3s] bg-color5 bottom-[3px] left-[12px] right-[12px] group-[.active]/contact-us:opacity-100 group-hover/contact-us:opacity-100"></span></a>
                                 <i class="fa-solid fa-angle-down text-color5 me-2 leading-[1.5] hidden group-[.menu-item-has-children]:inline-block"></i>
                             </li>
                         </ul>
@@ -69,127 +69,6 @@
         </nav>
     </header>
     <div class="main bg-[#FFFFFD]">
-        <section class="earn-commissions py-[32px]">
-            <div class="container-1440">
-                <div class="earn-commissions -wraper flex flex-col md:flex-row">
-                    <div class="img-part flex-1">
-                        <img src="./assets/images/seller.png" alt="section-image">
-                    </div>
-                    <div class="right-part bg-color10 flex-1 p-[24px]">
-                        <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
-                            <p class="subtitle lato text-color11 tracking-[2px]">BEST OF BRITISH</p>
-                            <div>
-                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Showcase Your Products and Connect with Buyers in Real-Time!</h2>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">Use Live Video Calls to demonstrate your products, and tap into a network of thousands of Recommenders sharing your items with friends and family for even more sales.</p>
-                            </div>
-                            <div class="btn-wraper *:p-[15px_17px] *:rounded-[5px] *:text-center">
-                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Join as a Seller</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> 
-        <section class="how-it-works bg-[#F7F7F5] md:py-[140px] mobile:py-[60px] py-[40px]">
-            <div class="container-1440">
-                <div class="how-it-works-wraper flex flex-col md:flex-row gap-[30px]">
-                    <div class="left-part flex-1">
-                        <h2 class="lg:text-[64px] text-[30px] text-color12 leading-[1.13] tracking-[1px]">How it works?</h2>
-                        <div class="how-it-works-list max-w-[540px] lg:mt-[80px] mt-[60px] grid lg:grid-cols-[1fr,1fr] md:grid-cols-[1fr] mobile-sm:grid-cols-[1fr,1fr] grid-cols-[1fr] xl:gap-[80px] md:gap-[50px] gap-[30px]">
-                            <div class="how-it-works-item mobile-sm:max-w-[230px] lato tracking-[1px] grid grid-rows-subgrid row-span-3 gap-[20px]">
-                                <div class="number text-[.75rem] text-color5 ">01.</div>
-                                <h3 class="title-part font-[600] text-[1rem] text-[#000000] leading-[1.5] uppercase">DISCOVER PRODUCTS</h3>
-                                <div>
-                                    <div class="text-part text-[.94rem] leading-[1.4] text-[#4C4C4C] flex flex-col gap-[24px]">
-                                        <p>While shopping in registered stores, keep an eye out for items that might interest your friends or family.</p>
-                                        <p>You don’t need to browse the app; just spot something while in-store that you think they'd love.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="how-it-works-item mobile-sm:max-w-[230px] lato tracking-[1px] grid grid-rows-subgrid row-span-3 gap-[20px]">
-                                <div class="number text-[.75rem] text-color5 ">02.</div>
-                                <h3 class="title-part font-[600] text-[1rem] text-[#000000] leading-[1.5] uppercase">Find Items in Registered Stores</h3>
-                                <div>
-                                    <div class="text-part text-[.94rem] leading-[1.4] text-[#4C4C4C] flex flex-col gap-[24px]">
-                                        <p>Look for products in stores that are signed up on the platform.</p>
-                                        <p>Whether you're on a mission to recommend or just happen to find something great, make sure it’s from a registered store.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="how-it-works-item mobile-sm:max-w-[230px] lato tracking-[1px] grid grid-rows-subgrid row-span-3 gap-[20px]">
-                                <div class="number text-[.75rem] text-color5 ">03.</div>
-                                <h3 class="title-part font-[600] text-[1rem] text-[#000000] leading-[1.5] uppercase">Send Recommendations</h3>
-                                <div>
-                                    <div class="text-part text-[.94rem] leading-[1.4] text-[#4C4C4C] flex flex-col gap-[24px]">
-                                        <p>Use the app to send recommendations directly to your friends and family. </p>
-                                        <p>Include your unique code to ensure you earn your commission on any purchases they make.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="how-it-works-item mobile-sm:max-w-[230px] lato tracking-[1px] grid grid-rows-subgrid row-span-3 gap-[20px]">
-                                <div class="number text-[.75rem] text-color5 ">04.</div>
-                                <h3 class="title-part font-[600] text-[1rem] text-[#000000] leading-[1.5] uppercase">Track and 
-                                    Follow Up</h3>
-                                <div>
-                                    <div class="text-part text-[.94rem] leading-[1.4] text-[#4C4C4C] flex flex-col gap-[24px]">
-                                        <p>Monitor your recommendations in the app. </p>
-                                        <p>Follow up with your friends or family if needed to help them complete their purchase and ensure your commission.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="how-it-works-item mobile-sm:max-w-[230px] lato tracking-[1px] grid grid-rows-subgrid row-span-3 gap-[20px]">
-                                <div class="number text-[.75rem] text-color5 ">05.</div>
-                                <h3 class="title-part font-[600] text-[1rem] text-[#000000] leading-[1.5] uppercase">Earn 
-                                    Commissions</h3>
-                                <div>
-                                    <div class="text-part text-[.94rem] leading-[1.4] text-[#4C4C4C] flex flex-col gap-[24px]">
-                                        <p>Receive commission when buyers make a purchase using your referral.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="img-part flex-1">
-                        <img src="./assets/images/seller-how.png" alt="section-image">
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="seller-subscription py-[32px] bg-[#F7F7F5] ">
-            <div class="container-1440">
-                <div class="turn-find-earning-wraper flex flex-col md:flex-row">
-                    <div class="img-part flex-1">
-                        <img src="./assets/images/our-mission.png" alt="our mission">
-                    </div>
-                    <div class="right-part bg-color10 flex-1 p-[24px]">
-                        <div class="text-part max-w-[464px] mx-auto h-[100%] flex flex-col gap-[24px] justify-around">
-                            <div>
-                                <h2 class="lg:text-[48px] sm:text-[30px] text-[24px] text-color8 leading-[1.12]">Seller Subscription Plan</h2>
-                                <p class="lato text-color12 text-[.94rem] font-[700] leading-[1.5] mt-[10px] text-justify">Start Selling with Confidence – 3 Months Free! £10/month after the free trial.</p>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px] text-justify">Grow your business and reach new customers by subscribing to our seller plan. </p>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">Subscription Benefits:</p>
-                                <ul class="lato text-justify text-color12 leading-[1.5] mt-[10px] marker:text-black list-disc pl-5 space-y-3">
-                                    <li>Exclusive Access to Recommenders who promote your products to their network.</li>
-                                    <li>Live Video Shopping sessions to engage buyers in real-time.</li>
-                                    <li>Detailed Sales Analytics to track your store's performance.</li>
-                                    <li>No commitment. Cancel anytime.</li>
-                                </ul>
-                                <p class="lato text-color12 text-[.94rem] leading-[1.5] mt-[10px]">At Best of British, we’re committed to making shopping personal, trustworthy, and community-driven while enhancing the experience for everyone involved.</p>
-                            </div>
-                            <div class="btn-wraper *:p-[15px_17px] *:rounded-[5px] *:text-center">
-                                <a href="./signup-as.html" class="text-[#ffffff] bg-color5">Start Your Free Trial</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="all-uder-one-roof md:py-[140px] mobile:py-[60px] py-[40px]">
-            <div class="container-1440">
-                <h2 class="max-w-[560px] mx-auto text-center md:text-[2.5rem] sm:text-[2rem] text-[1.7rem] leading-[1.12] font-[300] text-color12 uppercase">Bringing Britain’s Finest Together – All Under One Roof.</h2>
-                <p class="lato text-center text-[0.75rem] font-[300] text-color12 mt-[10px]">Best Of British</p>
-            </div>
-        </section> 
         <section class="contact-us py-[32px]">
             <div class="container-1440">
                 <div class="contact-us-wraper flex flex-col md:flex-row">
