--- a/you-are-all-set.html
+++ b/you-are-all-set.html
@@ -23,7 +23,7 @@
                 <p class="text-[1rem] leading-[1.5] text-color18">our store is ready to go live! You can now start adding products, managing your profile, and scheduling live shopping sessions.</p>
                 <div>
                     <div class="btn-wraper">
-                        <a href="javascript:void(0)" class="w-[100%] bg-color6 text-[#fff] py-[16px] rounded-[10px] text-center text-[1rem] font-[600] mt-[24px]">Go to Dashboard</a>
+                        <a href="./dashbord-home.html" class="w-[100%] bg-color6 text-[#fff] py-[16px] rounded-[10px] text-center text-[1rem] font-[600] mt-[24px]">Go to Dashboard</a>
                     </div>
                 </div>
             </div> 
