--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -217,8 +217,8 @@
                         </div>
                      </div>
                 </div>
-                <div class="dasboard-wraper-main bg-color22 p-[40px] flex gap-[30px] lg:flex-row flex-col">
-                    <div class="main-body flex-1">
+                <div class="dasboard-wraper-main bg-color22 p-[40px] flex gap-[30px] xl:flex-row flex-col-reverse">
+                    <div class="main-body flex-1 shrink-1">
                         <div class="single-cards-wraper grid grid-cols-[repeat(auto-fill,minmax(270px,_1fr))] gap-[30px]">
                             <div class="single-card rounded-[12px] p-[20px] bg-[#fff]">
                                 <div class="title-part flex items-center gap-[6px]">
@@ -351,7 +351,7 @@
                                 <canvas id="salesAnalysisChart"></canvas>
                             </div>
                         </div>
-                        <div class="table-wraper bg-[#fff] mt-[30px] overflow-none">
+                        <div class="table-wraper bg-[#fff] mt-[30px]">
                             <div class="top-part p-[24px] flex gap-[16px] flex-wrap">
                                 <div class="input-wraper relative flex-1">
                                     <svg class="search-icon absolute left-[15px] top-[10px]" width="19" height="19" viewBox="0 0 19 19" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -378,10 +378,10 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="custom-table-wraper w-[100%] xl:max-w-[1023px] overflow-x-auto">
-                                <table class="table-auto border-collapse *:text-[1rem] *:font-[600] *:leading-[1.5rem] w-[100%]">
+                            <div class="custom-table-wraper overflow-x-auto">
+                                <table class="border-collapse *:text-[1rem] *:font-[600] *:leading-[1.5rem]">
                                     <thead class="*:text-color2">
-                                        <tr class="first:*:px-[24px] *:py-[22px] *:px-[12px] *:border-y-[1px] *:border-[#F1F5F9]">
+                                        <tr class="first:*:px-[24px] *:py-[22px] *:px-[12px] *:border-y-[1px] *:border-[#F1F5F9] *:whitespace-nowrap">
                                             <td>
                                                 <input type="radio" name="" id="" class="h-[20px] w-[20px]">
                                             </td>
@@ -502,7 +502,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="right-sidebar bg-[#fff] p-[28px] rounded-[8px] lg:min-w-[480px] min-w-[auto] lg:relative  right-0">
+                    <div class="right-sidebar bg-[#fff] p-[28px] rounded-[8px]">
                         <div class="my-balance">
                             <div class="heading-part flex justify-between mb-[20px]">
                                 <h4 class="dm-serif text-color0 text-[1.5rem] leading-[1.32]">My Balance</h4>
