product page data table done

--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -218,7 +218,7 @@
                      </div>
                 </div>      
                 <div class="dasboard-wraper-main bg-color22 p-[40px] flex gap-[30px] xl:flex-row flex-col-reverse xl:w-[100%]">
-                    <div class="main-body flex-1 shrink-1 xl:w-[calc(100%-400px)]">
+                    <div class="main-body flex-1 xl:w-[calc(100%-400px)]">
                         <div class="single-cards-wraper grid grid-cols-[repeat(auto-fill,minmax(270px,_1fr))] gap-[30px]">
                             <div class="single-card rounded-[12px] p-[20px] bg-[#fff]">
                                 <div class="title-part flex items-center gap-[6px]">
