--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -27,8 +27,8 @@
                         <h3 class="text-color19 pb-[10px] border-b-[1px] border-[#F2F6FF]">Menu</h3>
                     </div>
                     <ul class="menu flex flex-col gap-[24px] mt-[20px]">
-                            <li class="group active">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                            <li class="group">
+                                <a href="./dashbord-home.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M16 22V18C16 15.7909 14.2091 14 12 14C9.79086 14 8 15.7909 8 18V22M21 10.1503V17.9668C21 20.1943 19.2091 22 17 22H7C4.79086 22 3 20.1943 3 17.9668V10.1503C3 8.93937 3.53964 7.7925 4.46986 7.02652L9.46986 2.90935C10.9423 1.69689 13.0577 1.69688 14.5301 2.90935L19.5301 7.02652C20.4604 7.7925 21 8.93937 21 10.1503Z" stroke="#0F172A" stroke-width="1.5"/>
@@ -47,7 +47,7 @@
                                     </span>
                                     <span>My Wallet</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -61,8 +61,8 @@
                                     <span>Orders</span>
                                 </a>
                             </li>
-                            <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                            <li class="group  active">
+                                <a href="./dashboard-product-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M20 6.44531L12 10.0009L4 6.44531" stroke="#0F172A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -135,7 +135,7 @@
                                     </span>
                                     <span>Inbox</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="relative group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -150,7 +150,7 @@
                                 </span>
                                     <span>Notifications</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -249,7 +249,7 @@
                                     </label>
                                 </div>
                                 <div class="add-product-btn-wraper">
-                                    <a href="javascript:void(0)" class="flex gap-[6px] items-center rounded-[8px] bg-color5 px-[16px] py-[10px]">
+                                    <a href="./dashboard-add-product-page.html" class="flex gap-[6px] items-center rounded-[8px] bg-color5 px-[16px] py-[10px]">
                                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M8 1V15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                             <path d="M1 8H15" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
