--- a/dashbord-home.html
+++ b/dashbord-home.html
@@ -28,7 +28,7 @@
                     </div>
                     <ul class="menu flex flex-col gap-[24px] mt-[20px]">
                             <li class="group active">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="dashbord-home.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M16 22V18C16 15.7909 14.2091 14 12 14C9.79086 14 8 15.7909 8 18V22M21 10.1503V17.9668C21 20.1943 19.2091 22 17 22H7C4.79086 22 3 20.1943 3 17.9668V10.1503C3 8.93937 3.53964 7.7925 4.46986 7.02652L9.46986 2.90935C10.9423 1.69689 13.0577 1.69688 14.5301 2.90935L19.5301 7.02652C20.4604 7.7925 21 8.93937 21 10.1503Z" stroke="#0F172A" stroke-width="1.5"/>
@@ -47,7 +47,7 @@
                                     </span>
                                     <span>My Wallet</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -62,7 +62,7 @@
                                 </a>
                             </li>
                             <li class="group">
-                                <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
+                                <a href="./dashboard-product-page.html" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
                                     <span>
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M20 6.44531L12 10.0009L4 6.44531" stroke="#0F172A" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -135,7 +135,7 @@
                                     </span>
                                     <span>Inbox</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="relative group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -150,7 +150,7 @@
                                 </span>
                                     <span>Notifications</span>
                                 </a>
-                                <div class="absolute right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
+                                <div class="absolute top-[0] right-0 h-[20px] w-[20px] rounded-[50%] bg-color21 items-center justify-center flex text-[#fff]">10</div>
                             </li>
                             <li class="group">
                                 <a href="javscript:void(0)" class="group-[.active]:*:opacity-100 *:opacity-[0.7] active flex items-center gap-[10px] *:text-color20 *:text-[16px]">
@@ -525,7 +525,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="withdraw-btn max-w-[340px] mx-auto relative top-[-24px]">
+                            <div class="withdraw-btn max-w-[300px] mx-auto relative top-[-24px]">
                                 <a href="javascript:void(0)" class="flex items-center p-[14px] rounded-[10px] justify-center gap-[10px] bg-color27 text-[#fff] text-[16px]"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M6 13L6 17L18 17L18 5C18 3.89543 17.1046 3 16 3L8 3C6.89543 3 6 3.89543 6 5L6 13ZM6 13C3.79086 13 2 14.7909 2 17C2 19.2091 3.79086 21 6 21L18 21C20.2091 21 22 19.2091 22 17C22 14.7909 20.2091 13 18 13" stroke="#191B23" stroke-width="1.5" stroke-linejoin="round"/>
                                     <path d="M10 11.4142L11.2929 12.7071C11.6834 13.0976 12.3166 13.0976 12.7071 12.7071L14 11.4142M12 7.41421L12 12.4142" stroke="#191B23" stroke-width="1.5" stroke-linecap="round"/>
