--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -195,7 +195,7 @@
                     </div>
                 </div>
             </div>
-            <div class="dashboard-right lg:w-[auto] w-[100%] flex-1 lg:ml-[290px] lg:peer-[.open]:ml-[0]">
+            <div class="dashboard-right overflow-x-hiddenlg:w-[auto] w-[100%] flex-1 lg:ml-[290px] lg:peer-[.open]:ml-[0]">
                 <div class="dashboard-right-top-header bg-[#ffffff] border-b-[1px] border-[#F2F6FF] px-[40px] py-[18px] flex flex-wrap justify-between items-center gap-[24px]">
                      <div class="text-part">
                         <h4 class="dm-serif text-color0 text-[1.5rem] leading-[1.32]">Product</h4>
