--- a/dashboard-order-page.html
+++ b/dashboard-order-page.html
@@ -297,8 +297,8 @@
                                                 <td>Customer name <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
                                                 <td>Date <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
                                                 <td>Amount <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
-                                                <td>Payment <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
-                                                <td>Status <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
+                                                <td>Payment Status<img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
+                                                <td>Order Status <img class="inline-block ms-[8px]" src="./assets/images/updown.svg" alt="updown"></td>
                                                 <td></td>
                                             </tr>
                                         </thead>
@@ -307,13 +307,16 @@
                                                 <td>
                                                     <input type="checkbox" name="" id="" class="custom-checkbox">
                                                 </td>
+                                                <td>12132</td>
                                                 <td>
-                                                    <div class="customer-name flex gap-[16px] items-center">
-                                                        <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
-                                                            <img src="" alt="">
+                                                    <a href="./order-summary.html" class="block">
+                                                        <div class="customer-name flex gap-[16px] items-center">
+                                                            <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
+                                                                <img src="" alt="">
+                                                            </div>
+                                                            <div class="name shrink-0">Jenny Wilson</div>
                                                         </div>
-                                                        <div class="name shrink-0">Jenny Wilson</div>
-                                                    </div>
+                                                    </a>
                                                 </td>
                                                 <td>Apr 27, 2034</td>
                                                 <td>£3,987.00</td>
@@ -350,13 +353,16 @@
                                                 <td>
                                                     <input type="checkbox" name="" id="" class="custom-checkbox">
                                                 </td>
+                                                <td>12356</td>
                                                 <td>
-                                                    <div class="customer-name flex gap-[16px] items-center">
-                                                        <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
-                                                            <img src="" alt="">
+                                                    <a href="./order-summary.html" class="block">
+                                                        <div class="customer-name flex gap-[16px] items-center">
+                                                            <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
+                                                                <img src="" alt="">
+                                                            </div>
+                                                            <div class="name">Eleanor Pena</div>
                                                         </div>
-                                                        <div class="name">Eleanor Pena</div>
-                                                    </div>
+                                                    </a>
                                                 </td>
                                                 <td>Apr 24, 2023</td>
                                                 <td>£7,987.00</td>
@@ -393,6 +399,7 @@
                                                 <td>
                                                     <input type="checkbox" name="" id="" class="custom-checkbox">
                                                 </td>
+                                                <td>12365</td>
                                                 <td>
                                                     <div class="customer-name flex gap-[16px] items-center">
                                                         <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
@@ -436,6 +443,7 @@
                                                 <td>
                                                     <input type="checkbox" name="" id="" class="custom-checkbox">
                                                 </td>
+                                                <td>12123</td>
                                                 <td>
                                                     <div class="customer-name flex gap-[16px] items-center">
                                                         <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
@@ -479,6 +487,7 @@
                                                 <td>
                                                     <input type="checkbox" name="" id="" class="custom-checkbox">
                                                 </td>
+                                                <td>12124</td>
                                                 <td>
                                                     <div class="customer-name flex gap-[16px] items-center">
                                                         <div class="img h-[40px] w-[40px] rounded-[50%] bg-[#C4C4C4] shrink-0">
