--- a/dashboard-product-page.html
+++ b/dashboard-product-page.html
@@ -341,7 +341,7 @@
                             </div>
                             <div class="data-table-main bg-[#fff]">
                                 <div class="custom-table-wraper product-table-wraper overflow-x-auto w-full">
-                                    <table class="border-collapse min-w-full *:text-[1.125rem] *:font-[600] *:leading-[1.5rem]">
+                                    <table class="with-action-btn-table border-collapse min-w-full *:text-[1.125rem] *:font-[600] *:leading-[1.5rem]">
                                         <thead class="*:text-color2">
                                             <tr class="first:*:px-[24px] *:py-[22px] *:px-[12px] *:border-y-[1px] *:border-[#F1F5F9] *:whitespace-nowrap">
                                                 <td>
@@ -357,7 +357,7 @@
                                                 <td></td>
                                             </tr>
                                         </thead>
-                                        <tbody class="*:text-color0">
+                                        <tbody class="*:text-color0 ">
                                             <tr class="*:has-[:checked]:bg-[#F8FAFC] *:py-[22px] first:*:px-[24px] last:*:px-[24px] *:px-[12px] *:border-y-[1px] *:border-[#F1F5F9] *:whitespace-nowrap">
                                                 <td><input type="checkbox" name="" id="" class="custom-checkbox"></td>
                                                 <td>
