--- a/buyer-home.html
+++ b/buyer-home.html
@@ -129,6 +129,137 @@
                 </div>
             </div>
         </section>
+        <section class="retailers pt-[120px] pb-[90px]">
+            <div class="container-1440">
+                <div class="heading-part flex justify-between items-end flex-wrap gap-[20px]">
+                    <div class="text-part">
+                        <div class="subtitle uppercase text-[0.875rem] leading-[2] tracking-[2px] text-color5">BEST OF BRITISH</div>
+                        <h2 class="second_heading font-[600] text-color5 text-[2.5rem] leading-[1.12] traking-[1px]">Retailers</h2>
+                    </div>
+                    <div class="btn-part text-end">
+                        <span class="arrow_part slick_custom_arrows flex mb-[10px] gap-[24px] cursor-pointer *:hover:text-[#1F3650]"></span>
+                        <a href="javascript:void(0)" class="text-[1.25rem] text-color4 leading-[1.1] font-[600]">View All</a>
+                    </div>
+                </div>
+                <div class="slider-part mt-[60px]">
+                    <div class="slider_wraper flex gap-[20px] global-slick-init" data-slidestoshow="6" data-infinite="true" data-autoplay="false" data-speed="1000"  data-dots="false" data-arrows="true" data-appendarrows=".arrow_part" 
+                    data-responsive='[{"breakpoint": 1440,"settings": {"slidesToShow": 5}},{"breakpoint": 1280,"settings": {"slidesToShow": 4}},{"breakpoint": 1024,"settings": {"slidesToShow": 3}},{"breakpoint": 768,"settings": {"slidesToShow": 3}},{"breakpoint": 640, "settings": {"slidesToShow": 2}},{"breakpoint": 475, "settings": {"slidesToShow": 1}}]'
+                    data-prevarrow='<svg width="54" height="23" viewBox="0 0 54 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.5" clip-path="url(#clip0_1_4064)">
+                            <path d="M0.676 11.032C0.551879 10.9853 0.414298 10.9899 0.293525 11.0446C0.172751 11.0994 0.0786782 11.1999 0.0320001 11.324C-0.014678 11.4481 -0.0101373 11.5857 0.0446233 11.7065C0.099384 11.8272 0.199879 11.9213 0.324 11.968C5.552 13.928 9.799 17.523 13.076 22.765C13.1463 22.8775 13.2584 22.9574 13.3876 22.9872C13.5168 23.017 13.6525 22.9943 13.765 22.924C13.8775 22.8537 13.9574 22.7416 13.9872 22.6124C14.017 22.4832 13.9943 22.3475 13.924 22.235C10.534 16.811 6.114 13.072 0.676 11.032Z" fill="#1F3650"/>
+                            <path d="M0.676 11.968C0.551879 12.0147 0.414298 12.0101 0.293525 11.9554C0.172751 11.9006 0.0786782 11.8001 0.0320001 11.676C-0.014678 11.5519 -0.0101373 11.4143 0.0446233 11.2935C0.099384 11.1728 0.199879 11.0787 0.324 11.032C5.552 9.072 9.8 5.478 13.076 0.235003C13.1463 0.122551 13.2584 0.0426245 13.3876 0.0128062C13.5168 -0.0170121 13.6525 0.00572032 13.765 0.0760027C13.8775 0.146285 13.9574 0.25836 13.9872 0.387573C14.017 0.516785 13.9943 0.652551 13.924 0.765003C10.534 6.189 6.114 9.928 0.676 11.968Z" fill="#1F3650"/>
+                            <path d="M0.5 12C0.367392 12 0.240215 11.9473 0.146447 11.8536C0.0526784 11.7598 0 11.6326 0 11.5C0 11.3674 0.0526784 11.2402 0.146447 11.1464C0.240215 11.0527 0.367392 11 0.5 11H53.5C53.6326 11 53.7598 11.0527 53.8536 11.1464C53.9473 11.2402 54 11.3674 54 11.5C54 11.6326 53.9473 11.7598 53.8536 11.8536C53.7598 11.9473 53.6326 12 53.5 12H0.5Z" fill="#1F3650"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_1_4064">
+                            <rect width="54" height="23" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>'
+                    data-nextarrow='<svg width="54" height="23" viewBox="0 0 54 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_1_4068)">
+                        <path d="M53.324 11.032C53.4481 10.9853 53.5857 10.9899 53.7065 11.0446C53.8273 11.0994 53.9213 11.1999 53.968 11.324C54.0147 11.4481 54.0101 11.5857 53.9554 11.7065C53.9006 11.8272 53.8001 11.9213 53.676 11.968C48.448 13.928 44.201 17.523 40.924 22.765C40.8537 22.8775 40.7416 22.9574 40.6124 22.9872C40.4832 23.017 40.3475 22.9943 40.235 22.924C40.1226 22.8537 40.0426 22.7416 40.0128 22.6124C39.983 22.4832 40.0057 22.3475 40.076 22.235C43.466 16.811 47.886 13.072 53.324 11.032Z" fill="#1F3650"/>
+                        <path d="M53.324 11.968C53.4481 12.0147 53.5857 12.0101 53.7065 11.9554C53.8273 11.9006 53.9213 11.8001 53.968 11.676C54.0147 11.5519 54.0101 11.4143 53.9554 11.2935C53.9006 11.1728 53.8001 11.0787 53.676 11.032C48.448 9.072 44.2 5.478 40.924 0.235003C40.8537 0.122551 40.7416 0.0426245 40.6124 0.0128062C40.4832 -0.0170121 40.3475 0.00572032 40.235 0.0760027C40.1226 0.146285 40.0426 0.25836 40.0128 0.387573C39.983 0.516785 40.0057 0.652551 40.076 0.765003C43.466 6.189 47.886 9.928 53.324 11.968Z" fill="#1F3650"/>
+                        <path d="M53.5 12C53.6326 12 53.7598 11.9473 53.8536 11.8536C53.9473 11.7598 54 11.6326 54 11.5C54 11.3674 53.9473 11.2402 53.8536 11.1464C53.7598 11.0527 53.6326 11 53.5 11H0.5C0.367392 11 0.240215 11.0527 0.146447 11.1464C0.0526784 11.2402 0 11.3674 0 11.5C0 11.6326 0.0526784 11.7598 0.146447 11.8536C0.240215 11.9473 0.367392 12 0.5 12H53.5Z" fill="#1F3650"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_1_4068">
+                        <rect width="54" height="23" fill="white"/>
+                        </clipPath>
+                        </defs>
+                        </svg>'>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/rolex.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Rolex</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/rl.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Ralph lauren</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/uni.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Ralph lauren</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/rolex.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Rolex</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/rl.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Ralph lauren</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/uni.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Ralph lauren</div>
+                        </div>
+                        <div class="slider_items">
+                            <div class="img ">
+                                <img src="./assets/images/rl.png" alt="retailers" class="w-full h-full">
+                            </div>
+                            <div class="text-color5 text-[1.6rem] text-center">Ralph lauren</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="featured_deals pt-[120px] pb-[90px]">
+            <div class="container-1440">
+                <div class="heading-part flex justify-between items-end flex-wrap gap-[20px]">
+                    <div class="text-part">
+                        <div class="subtitle uppercase text-[0.875rem] leading-[2] tracking-[2px] text-color5">BEST OF BRITISH</div>
+                        <h2 class="second_heading font-[600] text-color5 text-[2.5rem] leading-[1.12] traking-[1px]">Featured Deals</h2>
+                    </div>
+                    <div class="btn-part text-end">
+                        <span class="arrow_part slick_custom_arrows flex mb-[10px] gap-[24px] cursor-pointer *:hover:text-[#1F3650]"></span>
+                        <a href="javascript:void(0)" class="text-[1.25rem] text-color4 leading-[1.1] font-[600]">View All</a>
+                    </div>
+                </div>
+                <div class="slider-part mt-[60px]">
+                    <div class="slider_wraper flex gap-[20px] global-slick-init" data-slidestoshow="6" data-infinite="true" data-autoplay="false" data-speed="1000"  data-dots="false" data-arrows="true" data-appendarrows=".arrow_part" 
+                    data-responsive='[{"breakpoint": 1440,"settings": {"slidesToShow": 5}},{"breakpoint": 1280,"settings": {"slidesToShow": 4}},{"breakpoint": 1024,"settings": {"slidesToShow": 3}},{"breakpoint": 768,"settings": {"slidesToShow": 3}},{"breakpoint": 640, "settings": {"slidesToShow": 2}},{"breakpoint": 475, "settings": {"slidesToShow": 1}}]'
+                    data-prevarrow='<svg width="54" height="23" viewBox="0 0 54 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.5" clip-path="url(#clip0_1_4064)">
+                            <path d="M0.676 11.032C0.551879 10.9853 0.414298 10.9899 0.293525 11.0446C0.172751 11.0994 0.0786782 11.1999 0.0320001 11.324C-0.014678 11.4481 -0.0101373 11.5857 0.0446233 11.7065C0.099384 11.8272 0.199879 11.9213 0.324 11.968C5.552 13.928 9.799 17.523 13.076 22.765C13.1463 22.8775 13.2584 22.9574 13.3876 22.9872C13.5168 23.017 13.6525 22.9943 13.765 22.924C13.8775 22.8537 13.9574 22.7416 13.9872 22.6124C14.017 22.4832 13.9943 22.3475 13.924 22.235C10.534 16.811 6.114 13.072 0.676 11.032Z" fill="#1F3650"/>
+                            <path d="M0.676 11.968C0.551879 12.0147 0.414298 12.0101 0.293525 11.9554C0.172751 11.9006 0.0786782 11.8001 0.0320001 11.676C-0.014678 11.5519 -0.0101373 11.4143 0.0446233 11.2935C0.099384 11.1728 0.199879 11.0787 0.324 11.032C5.552 9.072 9.8 5.478 13.076 0.235003C13.1463 0.122551 13.2584 0.0426245 13.3876 0.0128062C13.5168 -0.0170121 13.6525 0.00572032 13.765 0.0760027C13.8775 0.146285 13.9574 0.25836 13.9872 0.387573C14.017 0.516785 13.9943 0.652551 13.924 0.765003C10.534 6.189 6.114 9.928 0.676 11.968Z" fill="#1F3650"/>
+                            <path d="M0.5 12C0.367392 12 0.240215 11.9473 0.146447 11.8536C0.0526784 11.7598 0 11.6326 0 11.5C0 11.3674 0.0526784 11.2402 0.146447 11.1464C0.240215 11.0527 0.367392 11 0.5 11H53.5C53.6326 11 53.7598 11.0527 53.8536 11.1464C53.9473 11.2402 54 11.3674 54 11.5C54 11.6326 53.9473 11.7598 53.8536 11.8536C53.7598 11.9473 53.6326 12 53.5 12H0.5Z" fill="#1F3650"/>
+                            </g>
+                            <defs>
+                            <clipPath id="clip0_1_4064">
+                            <rect width="54" height="23" fill="white"/>
+                            </clipPath>
+                            </defs>
+                        </svg>'
+                    data-nextarrow='<svg width="54" height="23" viewBox="0 0 54 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_1_4068)">
+                        <path d="M53.324 11.032C53.4481 10.9853 53.5857 10.9899 53.7065 11.0446C53.8273 11.0994 53.9213 11.1999 53.968 11.324C54.0147 11.4481 54.0101 11.5857 53.9554 11.7065C53.9006 11.8272 53.8001 11.9213 53.676 11.968C48.448 13.928 44.201 17.523 40.924 22.765C40.8537 22.8775 40.7416 22.9574 40.6124 22.9872C40.4832 23.017 40.3475 22.9943 40.235 22.924C40.1226 22.8537 40.0426 22.7416 40.0128 22.6124C39.983 22.4832 40.0057 22.3475 40.076 22.235C43.466 16.811 47.886 13.072 53.324 11.032Z" fill="#1F3650"/>
+                        <path d="M53.324 11.968C53.4481 12.0147 53.5857 12.0101 53.7065 11.9554C53.8273 11.9006 53.9213 11.8001 53.968 11.676C54.0147 11.5519 54.0101 11.4143 53.9554 11.2935C53.9006 11.1728 53.8001 11.0787 53.676 11.032C48.448 9.072 44.2 5.478 40.924 0.235003C40.8537 0.122551 40.7416 0.0426245 40.6124 0.0128062C40.4832 -0.0170121 40.3475 0.00572032 40.235 0.0760027C40.1226 0.146285 40.0426 0.25836 40.0128 0.387573C39.983 0.516785 40.0057 0.652551 40.076 0.765003C43.466 6.189 47.886 9.928 53.324 11.968Z" fill="#1F3650"/>
+                        <path d="M53.5 12C53.6326 12 53.7598 11.9473 53.8536 11.8536C53.9473 11.7598 54 11.6326 54 11.5C54 11.3674 53.9473 11.2402 53.8536 11.1464C53.7598 11.0527 53.6326 11 53.5 11H0.5C0.367392 11 0.240215 11.0527 0.146447 11.1464C0.0526784 11.2402 0 11.3674 0 11.5C0 11.6326 0.0526784 11.7598 0.146447 11.8536C0.240215 11.9473 0.367392 12 0.5 12H53.5Z" fill="#1F3650"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_1_4068">
+                        <rect width="54" height="23" fill="white"/>
+                        </clipPath>
+                        </defs>
+                        </svg>'>
+                        <div class="slider_items">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <footer class="bg-[#EBEAE6]">
         <div class="footer-top-part md:py-[120px] py-[50px]">
